# op-desafios

./: .gitignore  .gitmodules  .travis.yml  Palindromos.txt  Palindromos1.txt  Primos.java  Primos.txt  README.md  checkout-fork.sh  op-desafios.sln  palindromos.java  primos.java  s  tatus
Desafio 3/: Palindromos.java
ci/: .eslintrc.yml  bincheck.sh  dircheck.sh  eslintrc.json  gocheck.sh  javacheck.sh  javascriptcheck.sh  presubmit.sh  pycheck.sh  pylint3.rc  trailing-spaces-check.sh  utfcheck.sh  validator.sh
desafio-01/: README.md
desafio-02/: README.md
desafio-03/: Desafio_03_Palindromos.py  Palindrome.java  README.md
desafio-05/leovano/rust/: Cargo.toml  Makefile
desafio-05/leovano/rust/jl/: Cargo.toml
desafio-05/leovano/rust/jl/src/: lib.rs  main.rs
desafio-05/leovano/rust/jl/src/fields/: areas.rs  nome.rs  salary.rs
desafio-05/leovano/rust/jl/src/simd/: avx.rs  types.rs
desafio-05/leovano/rust/jl/src/stats/: mod.rs  spec.rs
desafio-05/leovano/rust/jl/src/utils/: parser.rs
desafio-05/leovano/rust/src/: lib.rs  main.rs
desafio-05/leovano/rust/src/fields/: areacode.rs  areas.rs  funcionario.rs  mod.rs  nome.rs  salary.rs  text.rs
desafio-05/leovano/rust/src/parser/: areas.rs  funcs.rs  mod.rs
desafio-05/leovano/rust/src/simd/: avx.rs  types.rs
desafio-05/leovano/rust/src/stats/: counter.rs  global.rs  max.rs  mod.rs  spec.rs
desafio-05/leovano/rust/src/utils/: aoc.rs  fnv.rs  mod.rs
desafio-06/lucasfturos/cpp/: .gitignore  CMakeLists.txt  Makefile  build.sh  main.cpp
desafio03/: palindromo.ipynb
travis-ci/: bincheck.sh  codecheck.sh  dircheck.sh  gocheck.sh  presubmit.sh  pycheck.sh  pylint3.rc  (+1 more)
(+2001 files in other folders)
