[package]
name = "desafio_05"
version = "0.1.0"
authors = ["Leo Silva Souza <leovano@protonmail.com>"]
edition = "2018"

[dependencies]
cfg-if = "0.1.9"
crossbeam-channel = "0.3.8"
fnv = "1.0.6"
hashbrown = "0.4.0"
memmap = "0.7.0"
scoped_threadpool = "0.1.9"

[profile.test]
opt-level = 3
overflow-checks = false

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false  # solve build regression
